адаптив под смартфоны

--- a/app/index.html
+++ b/app/index.html
@@ -261,7 +261,7 @@
         <div class="slider__inner">
 
           <div class="slider__item js-slider">
-            <div class="slider__item-img" style="background-image: url(images/slider-1.jpg)"></div>
+            <div class="slider__item-img img" style="background-image: url(images/slider-1.jpg)"></div>
             <div class="slider__item-info">
               <div class="slider__suptitle">Prices are lower</div>
               <div class="slider__title">Chair Eames DSW Style 24$</div>
@@ -275,7 +275,7 @@
           </div>
 
           <div class="slider__item js-slider">
-            <div class="slider__item-img" style="background-image: url(images/slider-2.jpg)"></div>
+            <div class="slider__item-img img" style="background-image: url(images/slider-2.jpg)"></div>
             <div class="slider__item-info">
               <div class="slider__suptitle">On a remote site</div>
               <div class="slider__title">Discount up to 40% on office chairs</div>
@@ -289,7 +289,7 @@
           </div>
 
           <div class="slider__item js-slider">
-            <div class="slider__item-img" style="background-image: url(images/slider-3.jpg)"></div>
+            <div class="slider__item-img img" style="background-image: url(images/slider-3.jpg)"></div>
             <div class="slider__item-info">
               <div class="slider__suptitle">New chairs in every home</div>
               <div class="slider__title">Discounts up to 50%</div>
@@ -303,7 +303,7 @@
           </div>
 
           <div class="slider__item js-slider">
-            <div class="slider__item-img" style="background-image: url(images/slider-4.jpg)"></div>
+            <div class="slider__item-img img" style="background-image: url(images/slider-4.jpg)"></div>
             <div class="slider__item-info">
               <div class="slider__suptitle">The kit is cheaper!</div>
               <div class="slider__title">15% discount on dining groups</div>
