--- a/app/index.html
+++ b/app/index.html
@@ -593,7 +593,7 @@
           <div class="collections__item js-slider">
             <div class="collections__item-wrapper">
               <div class="collections__item-left">
-                <div class="collections__item-left__img"
+                <div class="collections__item-left__img img"
                      style="background-image: url(images/collection-slider-1.jpg)">
                 </div>
                 <div class="collections__item-left__info">
@@ -629,7 +629,7 @@
           <div class="collections__item js-slider">
             <div class="collections__item-wrapper">
               <div class="collections__item-left">
-                <div class="collections__item-left__img"
+                <div class="collections__item-left__img img"
                      style="background-image: url(images/collection-slider-2.jpg)"></div>
                 <div class="collections__item-left__info">
                   <div class="collections__item-left__title">Collection Tolix</div>
@@ -698,7 +698,7 @@
           <div class="collections__item js-slider">
             <div class="collections__item-wrapper">
               <div class="collections__item-left">
-                <div class="collections__item-left__img"
+                <div class="collections__item-left__img img"
                      style="background-image: url(images/collection-slider-4.jpg)"></div>
                 <div class="collections__item-left__info">
                   <div class="collections__item-left__title">Designer collection</div>
