update index.html & style.scss

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="header__top">
         <div class="container">
-          <div class="header__top-inner animate__animated animate__fadeInDown">
+          <div class="header__top-inner">
             <div class="header__box--left">
               <div class="header__logo">
                 <a href="#">
@@ -322,13 +322,13 @@
 
     <section class="sales-leaders" id="boxs">
       <div class="container">
-        <div class="sales-leaders__title title animate-right">Sales leaders</div>
-        <div class="sales-leaders__subtitle animate-right">The most popular models from all categories of the online
+        <div class="sales-leaders__title title">Sales leaders</div>
+        <div class="sales-leaders__subtitle">The most popular models from all categories of the online
           store
         </div>
         <div class="sales-leaders__items">
 
-          <div class="sales-leaders__item box animate-bottom">
+          <div class="sales-leaders__item box">
             <div class="sales-leaders__inner">
               <div class="sales-leaders__discount">
                 sale<span>-13%
@@ -359,7 +359,7 @@
             </div>
           </div>
 
-          <div class="sales-leaders__item box animate-bottom">
+          <div class="sales-leaders__item box">
             <div class="sales-leaders__inner">
               <div class="sales-leaders__discount">
                 sale<span>-15%
@@ -390,7 +390,7 @@
             </div>
           </div>
 
-          <div class="sales-leaders__item box animate-bottom">
+          <div class="sales-leaders__item box">
             <div class="sales-leaders__inner">
               <div class="sales-leaders__discount">
                 sale<span>-37%
@@ -421,7 +421,7 @@
             </div>
           </div>
 
-          <div class="sales-leaders__item box animate-bottom">
+          <div class="sales-leaders__item box">
             <div class="sales-leaders__inner">
               <div class="sales-leaders__discount">
                 sale<span>-30%
@@ -578,7 +578,7 @@
 
         </div>
 
-        <div class="sales-leaders__loadMore animate-bottom" id="loadMore">
+        <div class="sales-leaders__loadMore" id="loadMore">
           Load more
           <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
         </div>
@@ -587,8 +587,8 @@
 
     <section class="collections">
       <div class="container">
-        <div class="collections__mainTitle title animate-left">Collections</div>
-        <div class="collections__inner animate-bottom">
+        <div class="collections__mainTitle title">Collections</div>
+        <div class="collections__inner">
 
           <div class="collections__item js-slider">
             <div class="collections__item-wrapper">
@@ -735,11 +735,11 @@
 
     <section class="new-items" id="newBoxs">
       <div class="container">
-        <div class="new-items__title title animate-right">New items</div>
-        <div class="new-items__subtitle animate-right">Pay attention to the latest arrivals.</div>
+        <div class="new-items__title title">New items</div>
+        <div class="new-items__subtitle">Pay attention to the latest arrivals.</div>
         <div class="new-items__items">
 
-          <div class="new-items__item newBox animate-bottom">
+          <div class="new-items__item newBox">
             <div class="new-items__inner">
               <div class="new-items__discount">
                 sale<span>-5%
@@ -770,7 +770,7 @@
             </div>
           </div>
 
-          <div class="new-items__item newBox animate-bottom">
+          <div class="new-items__item newBox">
             <div class="new-items__inner">
               <div class="new-items__discount">
                 sale<span>-25%
@@ -801,7 +801,7 @@
             </div>
           </div>
 
-          <div class="new-items__item newBox animate-bottom">
+          <div class="new-items__item newBox">
             <div class="new-items__inner">
               <div class="sales-leaders__discount">
                 sale<span>-10%
@@ -832,7 +832,7 @@
             </div>
           </div>
 
-          <div class="new-items__item newBox animate-bottom">
+          <div class="new-items__item newBox">
             <div class="new-items__inner">
               <div class="new-items__discount">
                 sale<span>-17%
@@ -989,7 +989,7 @@
 
         </div>
 
-        <div class="new-items__loadMore animate-bottom" id="newItemsLoadMore">
+        <div class="new-items__loadMore" id="newItemsLoadMore">
           Load more
           <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
         </div>
@@ -998,12 +998,12 @@
 
     <section class="projects">
       <div class="container">
-        <div class="projects__title title animate-left">Projects</div>
-        <div class="projects__subtitle animate-left">Projects Stool Group</div>
-        <a class="projects__goToProjects animate-left" href="#">Go to projects</a>
+        <div class="projects__title title">Projects</div>
+        <div class="projects__subtitle">Projects Stool Group</div>
+        <a class="projects__goToProjects" href="#">Go to projects</a>
 
         <div class="projects__cards">
-          <div class="projects__card animate-bottom">
+          <div class="projects__card">
             <div class="projects__card-inner">
               <img src="images/projects-card-1.jpg" alt="projects card images">
               <div class="projects__card-link">
@@ -1015,7 +1015,7 @@
               </div>
             </div>
           </div>
-          <div class="projects__card animate-bottom">
+          <div class="projects__card">
             <div class="projects__card-inner">
               <img src="images/projects-card-2.jpg" alt="projects card images">
               <div class="projects__card-link">
@@ -1223,10 +1223,10 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__inner">
-        <div class="footer__inner-title title animate-left">Mebel Group</div>
+        <div class="footer__inner-title title">Mebel Group</div>
 
         <div class="footer__items">
-          <div class="footer__item animate-bottom">
+          <div class="footer__item">
             <div class="footer__item-title">Contacts</div>
             <ul class="footer__item-list">
               <li><a href="#">About as</a></li>
@@ -1235,7 +1235,7 @@
             </ul>
           </div>
 
-          <div class="footer__item animate-bottom">
+          <div class="footer__item">
             <div class="footer__item-title">Support Service</div>
             <ul class="footer__item-list">
               <li><a href="#">Feedback</a></li>
@@ -1244,7 +1244,7 @@
             </ul>
           </div>
 
-          <div class="footer__item animate-bottom">
+          <div class="footer__item">
             <div class="footer__item-title">Personal Area</div>
             <ul class="footer__item-list">
               <li><a href="#">Personal area</a></li>
@@ -1252,7 +1252,7 @@
               <li><a href="#">Newsletter</a></li>
             </ul>
           </div>
-          <div class="footer__item animate-bottom">
+          <div class="footer__item">
             <div class="footer__item-title">Designed by</div>
             <ul class="footer__item-list">
               <li>
@@ -1268,7 +1268,7 @@
             </ul>
           </div>
         </div>
-        <div class="footer__bottom animate-bottom">
+        <div class="footer__bottom">
           <div class="footer__bottom-copyright">© 2020 Mebel Group</div>
           <div class="footer__bottom-privacyPolicy">Privacy Policy</div>
           <div class="footer__bottom-termsOfUse">Terms of use</div>
